# AgenticRedTeam

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  FINAL_SUMMARY.md  LAUNCH.txt  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  STREAMLIT_GUIDE.md  USAGE.md  demo.py  docker-compose.yml  main.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  run_streamlit.sh  setup.py  streamlit_app.py  test_env.py
.github/workflows/: ci.yml  security.yml
benchmarks/: harmbench_loader.py
config/: default_config.yaml
configs/: default.yaml
examples/: basic_prompt_injection.yaml  data_extraction.yaml  jailbreak_attempt.yaml
results/: benchmark_gpt-3.5-turbo_results.json  report_20251008_191231.txt  streamlit_results_20251008_204748.json
scripts/: run-tests.sh  setup.sh
src/: __init__.py  cli.py  evaluator.py  orchestrator.py
src/adversarial/: __init__.py  attacks.py  executor.py  manager.py
src/agents/: __init__.py  base.py  judge_agent.py
src/attacks/: __init__.py  crescendo.py  prompt_injection.py
src/evaluation/: __init__.py  evaluator.py  metrics.py  scoring.py
src/reporting/: __init__.py  formats.py  generator.py
src/sandbox/: __init__.py  docker_sandbox.py  environment.py  manager.py  mock_sandbox.py
src/scenarios/: __init__.py  builder.py  generator.py  loader.py  scenario.py
src/targets/: __init__.py  llm_target.py
tests/: __init__.py  test_sandbox.py  test_scenarios.py
